--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -71,6 +71,23 @@ const currentPath = Astro.url.pathname;
             h3:first-child {
                 margin-top: 0;
             }
+            img {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                max-width: 100%;
+                height: auto;
+            }
+            figure {
+                margin: 2rem 0;
+                text-align: center;
+            }
+            figcaption {
+                margin-top: 0.5rem;
+                font-size: 0.9rem;
+                color: #666;
+                font-style: italic;
+            }
         </style>
     </head>
     <body>
