--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,6 +7,9 @@ const { currentPath } = Astro.props;
     <a href="/writing" class={currentPath === "/writing" ? "active" : ""}
         >Writing</a
     >
+    <a href="/subscribe" class={currentPath === "/subscribe" ? "active" : ""}
+        >Subscribe</a
+    >
 </nav>
 
 <style>
