Add SEO and pagefind support

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,6 +7,9 @@ const { currentPath } = Astro.props;
     <a href="/writing" class={currentPath === "/writing" ? "active" : ""}
         >Writing</a
     >
+    <!-- <a href="/subscribe" class={currentPath === "/subscribe" ? "active" : ""}
+        >Subscribe</a
+    > -->
     <a href="/rss.xml" class="rss-link" title="RSS Feed" target="_blank">
         <svg
             xmlns="http://www.w3.org/2000/svg"
