--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,10 +1,10 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
 
-const { title, date, description } = Astro.props;
+const { title, date, description, image } = Astro.props;
 ---
 
-<BaseLayout title={title} description={description}>
+<BaseLayout title={title} description={description} image={image}>
     <article>
         <header style="margin-bottom: 2rem;">
             <h1 style="margin-bottom: 0.5rem;">{title}</h1>
