Fix preview cards

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import Nav from "../components/Nav.astro";
 
 const {
     title,
-    description = "Learning in public about developer tools, programming languages, and software craft",
+    description = "A space to share my continuous journey of learning about fundamentals and software craft",
     image = "/images/Ganga_River.jpg",
 } = Astro.props;
 
