Fix Subscribe page and use Kit

--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -9,7 +9,7 @@ const sortedPosts = posts.sort(
 );
 ---
 
-<BaseLayout title="Blog Posts">
+<BaseLayout title="Writing">
     <ul class="post-list">
         {
             sortedPosts.map((post) => (
